# chat-stick

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  PROTOCOL.md  README.md  REFACTOR.md  UPSTREAM_COMPATIBILITY.md  deploy.sh  designs.md  first-sentences.md  flash.sh  implementation-chat-turn-robustness.md  publish-ota-release.sh  publish.sh  verify-stick.sh
.pi/skills/chat-stick-graphics/: SKILL.md
apps/reachy-chat-stick/: README.md  plan.md  pyproject.toml  run.sh
apps/reachy-chat-stick/reachy_chat_stick/: __init__.py  audio.py  config.py  main.py  runner.py  timers.py  vision.py
apps/reachy-chat-stick/reachy_chat_stick.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devices/firmware/common/: library.json
devices/firmware/m5-stick/: monitor.py  platformio.ini
devices/firmware/waveshare/: platformio.ini
firmware/: monitor.py  platformio.ini
firmware/src/: Config.h
firmware/src/app/: AppController.cpp  AppController.h  TurnController.cpp  (+1 more)
server/: .dev.vars.example  package-lock.json  package.json  wrangler.toml  wrangler.toml.example
server/migrations/: 0002_files.sql  0003_images.sql
server/scripts/: deploy-worker.mjs  smoke-turns.mjs  worker-name.mjs
server/src/: conversation-store.ts  debug-audio-store.ts  docs-tool.ts  email-tool.ts  email.ts  file-tools.ts  files.ts  flashcard-api.ts  gemini-client.ts  gemini-live.ts  gemini-tools.ts  image-gen.ts  image-tool.ts  images.ts  index.ts  learning-types.ts  live-session.ts  prompt-builder.ts  tool-router.ts  transcript-delta.ts  voice-tool.ts  web-fetch.ts
(+72 files in other folders)
